--- a/maze/index.html
+++ b/maze/index.html
@@ -14,14 +14,13 @@
       }
     </style>
     <script src="js/generateMaze.js"></script>
-  </head>
-  <body>
-    <script src="js/three.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
+    <script src="js/three.min.js"></script>
+    <script src="js/tween.umd.js"></script>
     <!-- Remove Orbit Controls after Dev -->
     <script src="js/OrbitControls.js"></script>
-
-    <div style="display: none;"></div>
-
+  </head>
+  <body>
     <script src="js/maze.js"></script>
   </body>
 </html>
