Build navigation and canvas drawing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Final Project</title>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img class="spinny" src="/assets/moon.gif" />
+      <img class="spinny" src="/assets/moon.gif" />
+      <h1>Evan Silverman's CS380 Final Project!</h1>
+      <p>
+        Welcome to my <span class="blinking">Final Project</span>! For this
+        project I tried to connect nostalgia, a feeling helping me through
+        quarantine, to the feelings I have been having throughout this time
+        stuck in my room.
+      </p>
+    </header>
+    <div id="container">
+      <div id="image-display"></div>
+      <div id="links">
+        <a id="maze" href="/maze">Maze</a>
+        <a href="#"></a>
+        <a href="#"></a>
+      </div>
+    </div>
+    <script src="index.js"></script>
+  </body>
 </html>
