--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
         Welcome to my <span class="blinking">Final Project</span>! For this
         project I tried to connect nostalgia, a feeling helping me through
         quarantine, to the feelings I have been having throughout this time
-        stuck in my room.
+        stuck in my room. Each drawing is something nostalgic with a twist to
+        provide insight on the experience that I have been having recently.
       </p>
     </header>
     <div id="container">
       <div id="image-display"></div>
       <div id="links">
-        <a id="maze" href="/maze">Maze</a>
-        <a href="#"></a>
+        <a href="/maze">Maze</a>
+        <a href="/blockgame/">Brick Breaker?</a>
         <a href="#"></a>
       </div>
     </div>
